--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,8 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7efaf77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f52f8703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a38ad57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a5009aa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KEY= os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a2a06871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KEY: 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\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"KEY:\", KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e3628ce3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm= ChatOpenAI(openai_api_key=KEY, model=\"gpt-4-0613\", temperature=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b2b8ffe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -16,7 +99,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.20"
   }
  },
